# FinHub

./: .gitignore  README.md  index.html  package-lock.json  package.json  response.json  tailwind.config.js  test.json
.virtual_documents/notebooks/: ml_optimizer.ipynb
api/: app.py  best_portfolio_model.pth  ml_optimizer.ipynb  portfolio_model.py
api/.ipynb_checkpoints/: ml_optimizer-checkpoint.ipynb  portfolio_model-checkpoint.py
notebooks/: best_portfolio_model.pth  data.json  ml_optimizer.ipynb  sentiment_scraper.ipynb
notebooks/.ipynb_checkpoints/: AAPL_6mo_historical-checkpoint.json  data-checkpoint.json  ml_optimizer-checkpoint.ipynb  sentiment_results-checkpoint.json
risk_engine/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
risk_engine/cpp/: CMakeLists.txt  bindings.cpp  montecarlo.cpp  montecarlo.h
risk_engine/python/: __init__.py  main.py  risk_wrapper.py
risk_engine/tests/: test_montecarlo.py
sentiment_api/: config.py  docker-compose.yml  main.py  models.py  requirements.txt
sentiment_api/data/: AAPL.json  AMZN.json  BTC.json  DSFF.json  GOOGL.json  MSFT.json  NBIS.json  NVDA.json  ORCL.json  TATA.json  TSLA.json  Z.json
sentiment_api/services/: gemini_service.py  price_service.py  sentiment_service.py
server/: index.js
server/database/: database.js
server/middleware/: auth.js
server/models/: Asset.js  Portfolio.js  RiskMetrics.js  User.js
server/routes/: auth.js  optimization.js  portfolio.js  risk.js  sentiment.js
src/: App.jsx  index.css
src/contexts/: AuthContext.jsx  ThemeContext.jsx
(+31 files in other folders)
